# event-store-adapter-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.ja.md  README.md  renovate.json
.github/workflows/: ci.yml  lib-bump-version.yml  lib-release.yml
core/: Cargo.toml
core/src/: key_resolver.rs  serializer.rs
docs/: DATABASE_SCHEMA.ja.md  DATABASE_SCHEMA.md
examples/user-account/: Cargo.toml
examples/user-account/src/: main.rs  user_account.rs  user_account_repository.rs
lib/: Cargo.toml
lib/src/: event_store.rs  event_store_backend.rs  event_store_for_bigtable.rs  event_store_for_bigtable_test.rs  event_store_for_dynamodb.rs  event_store_for_dynamodb_test.rs  event_store_for_memory.rs  event_store_test.rs  event_store_test_support.rs  generic_event_store.rs  key_resolver.rs  lib.rs  serializer.rs  types.rs
src/: event_store.rs  key_resolver.rs  lib.rs  serializer.rs  types.rs
test-utils/: Cargo.toml
test-utils/src/: bigtable.rs  docker.rs  dynamodb.rs  id_generator.rs  lib.rs
tools/: docker-compose.yaml  otel-collector-config.yaml
