[workspace]
members = ["lib", "test-utils", "examples/*"]

resolver = "2"

[workspace.dependencies]
chrono = "0.4.37"
anyhow = "1.0.82"
thiserror = "1.0.58"
async-trait = "0.1.80"
aws-config = "1.2.0"
aws-sdk-dynamodb = "1.22.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4.21"
ulid-generator-rs = "0.0.103"
testcontainers = "0.15.0"
serial_test = "3.0.0"
once_cell = "1.19.0"
aws-http = "0.60.5"
tokio = "1.37.0"

tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.22"
opentelemetry_sdk = "0.22"
opentelemetry-stdout = { version = "0.3.0" }
opentelemetry-jaeger = "0.21.0"
opentelemetry-otlp = "0.15.0"
tracing-opentelemetry = "0.23"
