[workspace]
members = ["lib", "test-utils", "examples/*"]

resolver = "2"

[workspace.dependencies]
chrono = "0.4.38"
anyhow = "1.0.82"
thiserror = "1.0.59"
async-trait = "0.1.80"
aws-config = "1.2.1"
aws-sdk-dynamodb = "1.23.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4.21"
ulid-generator-rs = "0.0.109"
testcontainers = "0.22.0"
serial_test = "3.1.1"
once_cell = "1.19.0"
aws-http = "0.60.5"
tokio = "1.37.0"

tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
opentelemetry-stdout = { version = "0.4.0" }
opentelemetry-jaeger = "0.22.0"
opentelemetry-otlp = "0.16.0"
tracing-opentelemetry = "0.24"
