[workspace]
members = ["lib", "test-utils", "examples/*"]

resolver = "2"

[workspace.dependencies]
chrono = "0.4.38"
anyhow = "1.0.82"
thiserror = "2.0.0"
async-trait = "0.1.80"
aws-config = "1.2.1"
aws-sdk-dynamodb = "1.23.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4.21"
ulid-generator-rs = "0.0.112"
testcontainers = "0.26.0"
serial_test = "3.1.1"
once_cell = "1.19.0"
aws-http = "0.60.5"
tokio = "1.37.0"

tracing = "0.1"
tracing-subscriber = "0.3"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
googleapis-tonic-google-bigtable-v2 = "0.35.0"
googleapis-tonic-google-bigtable-admin-v2 = "0.38.0"
