[package]
name = "event-store-adapter-rs"
version = "0.1.0"

description = "crate to make DynamoDB an Event Store"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "ddd"]
categories = ["data-structures", "web-programming", "rust-patterns"]
readme = "../README.md"
repository = "https://github.com/j5ik2o/event-store-adapter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
ulid-generator-rs = { workspace = true, features = ["serde", "uuid"] }
env_logger = { workspace = true }
testcontainers = { workspace = true }
serial_test = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
event-store-adapter-test-utils-rs = { path = "../test-utils" }
