[package]
name = "event-store-adapter-rs"
version = "1.3.3"

description = "crate to make DynamoDB an Event Store"
authors = ["Junichi Kato <j5ik2o@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "ddd"]
categories = ["data-structures", "web-programming", "rust-patterns"]
readme = "../README.md"
repository = "https://github.com/j5ik2o/event-store-adapter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
aws-http = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
googleapis-tonic-google-bigtable-v2 = { workspace = true }

[dev-dependencies]
ulid-generator-rs = { workspace = true, features = ["serde", "uuid"] }
testcontainers = { workspace = true }
serial_test = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
event-store-adapter-test-utils-rs = { path = "../test-utils" }
tracing-subscriber = { workspace = true, features = [ "std", "env-filter" ] }
googleapis-tonic-google-bigtable-admin-v2 = { workspace = true }
