[package]
name = "event-store-adapter-test-utils-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
async-trait = "0.1.72"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.30.0"
chrono = { version = "0.4.*", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
ulid-generator-rs = { version = "0.0.89", features = ["serde", "uuid"] }
env_logger = "0.10.0"
testcontainers = "0.14.0"
serial_test = "*"
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
