[package]
name = "event-store-adapter-test-utils-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
ulid-generator-rs = { workspace = true, features = ["serde", "uuid"] }
env_logger = { workspace = true }
testcontainers = { workspace = true }
serial_test = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
