[package]
name = "example-user-account"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
anyhow = "1.0.72"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.28.0"
event-store-adapter-rs = { path = "../../lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid-generator-rs = { version = "0.0.88", features = ["serde", "uuid"] }
once_cell = "1.18.0"
chrono = { version = "0.4.*", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
testcontainers = "0.14.0"
event-store-adapter-test-utils-rs = { path = "../../test-utils" }
