[package]
name = "example-user-account"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
log = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { workspace = true }
aws-http = { workspace = true }
event-store-adapter-rs = { path = "../../lib" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ulid-generator-rs = { workspace = true, features = ["serde", "uuid"] }
once_cell = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
testcontainers = { workspace = true }
event-store-adapter-test-utils-rs = { path = "../../test-utils" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }